Updates and fixes to HapMap_LinkImpute

--- a/GWAS/impute/HapMap_LinkImpute.ipynb
+++ b/GWAS/impute/HapMap_LinkImpute.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "assisted-depth",
+   "id": "8e692ab3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,29 +14,40 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sustained-repeat",
+   "id": "6cf25fb6",
    "metadata": {},
    "source": [
-    "# Steps to prepare Hapmap SNP file for LinkImpute imputation"
+    "# LinkImpute\n",
+    "Download from: http://www.cultivatingdiversity.org/software.html\n",
+    "\n",
+    "Citation: https://www.g3journal.org/content/5/11/2383\n",
+    "\n",
+    "To run: java -jar LinkImpute.jar -a numeric.array imputed.array\n",
+    "\n",
+    "TODO: Add a small sample hapmap file for reference"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "adverse-papua",
+   "id": "ce7989da",
    "metadata": {},
    "source": [
-    "### 1. Convert the hapmap to a numeric format"
+    "# Convert hapmap file to LinkImpute numeric array and back"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "touched-institution",
-   "metadata": {},
+   "id": "c469b56a",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "# Load hapmap file\n",
-    "df = pd.read_csv(\"file.hmp.txt\", sep=\"\\t\")\n",
+    "# Load the hapmap file and remove the unused columns\n",
+    "\n",
+    "# Couldn't finish anaylsis of raw data (~2M SNPs) withon 8 hours. Using filtered instead (~200k SNPs)\n",
+    "df = pd.read_csv(\"name.hmp.txt\", sep=\"\\t\")\n",
     "df = df.drop(df.columns[4:11], axis=1)\n",
     "df.head()"
    ]
@@ -44,96 +55,78 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "greek-public",
+   "id": "bc70e449",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Keep only single base-pair alleles\n",
-    "# Ended up not being necessary but worth running\n",
+    "# Keep only allele pairs of interest\n",
     "df = df[df[\"alleles\"].isin([\"A/T\", \"A/G\", \"A/C\",\n",
     "                            \"T/A\", \"T/G\", \"T/C\",\n",
-    "                            \"G/A\", \"G/T\", \"G/A\",\n",
+    "                            \"G/C\", \"G/T\", \"G/A\",\n",
     "                            \"C/A\", \"C/G\", \"C/T\"])]\n",
-    "df.head()"
+    "# To see if any allele did not pass use: \"C/A\", \"C/G\", \"C/T\"]) == False] "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "effective-outside",
+   "id": "85ae496a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert single bi-allelic single-SNP alleles to numeric\n",
     "def to_numeric(row):\n",
+    "    # Sometimes returns key errors. Replace them with N\n",
+    "    # It is much slower so commented-out by default\n",
+    "    # for IUPAC in ['Y','R','W','S','K','M','D','V','H','B']: \n",
+    "    #    row = row.str.replace(IUPAC, \"N\")    \n",
+    "    \n",
     "    row_list = row.tolist()\n",
     "    # Convert the left allele to 0, right to 1, and missing to -1\n",
     "    allele_dict = {row_list[1][0]: 0, row_list[1][-1]: 1, \"N\": -1}\n",
     "    row_list[4:] = [allele_dict[allele] for allele in row_list[4:]]\n",
     "    return pd.Series(row_list)\n",
+    "\n",
+    "# Apply function to all rows\n",
     "df = df.apply(to_numeric, axis=1)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "characteristic-episode",
-   "metadata": {},
-   "source": [
-    "### 2. Save numeric hapmap array and run LinkImpute (externally)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "complex-hybrid",
+   "id": "db17e0f6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Format data for the array format that can be used directly with the LinkImpute package\n",
     "array_format = df.T\n",
     "array_format = array_format.drop(array_format.index[:4])\n",
-    "array_format.to_csv(\"numerical/sorghum.array\", sep=\" \", index=False, header=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "eligible-matrix",
-   "metadata": {},
-   "source": [
-    "### 3. Load the imputation results and the original hapmap file"
+    "array_format.to_csv(\"numeric.array\", sep=\" \", index=False, header=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "finnish-favorite",
+   "id": "49740739",
    "metadata": {},
    "outputs": [],
    "source": [
-    "imp = pd.read_csv(\"numerical/sorghum_imp.array\", sep=\"\\t\", header=None).T\n",
-    "df = pd.read_csv(\"EP_filtered_165883_numeric.txt.hmp.txt\", sep=\"\\t\")\n",
+    "# Read the LinkUmpute output and put it back together with the original hapmap file \n",
+    "imp = pd.read_csv(\"imputed.array\", sep=\"\\t\", header=None).T\n",
+    "df = pd.read_csv(\"name.hmp.txt\", sep=\"\\t\")\n",
     "df = df[df[\"alleles\"].isin([\"A/T\", \"A/G\", \"A/C\",\n",
     "                            \"T/A\", \"T/G\", \"T/C\",\n",
-    "                            \"G/A\", \"G/T\", \"G/A\",\n",
+    "                            \"G/C\", \"G/T\", \"G/A\",\n",
     "                            \"C/A\", \"C/G\", \"C/T\"])]\n",
     "df = df.reset_index(drop=True)\n",
     "df.iloc[:,11:] = imp\n",
-    "#imp.columns = df.columns[11:]\n",
     "columns = df.columns # not sure why column names are deleted later\n",
     "df"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "bigger-fabric",
-   "metadata": {},
-   "source": [
-    "### 4. Convert the numerical imputed array back to hapmap format"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adjusted-valley",
+   "id": "7e4b44cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +134,7 @@
     "def to_allelic(row):\n",
     "    row_list = row.tolist()\n",
     "    # Convert the left allele to 0, right to 1, and missing to -1\n",
-    "    allele_dict = {0: row_list[1][0], 1: row_list[1][-1]}\n",
+    "    allele_dict = {0: row_list[1][0], 1: row_list[1][-1], -1:\"N\"}\n",
     "    row_list[11:] = [allele_dict[allele] for allele in row_list[11:]]\n",
     "    return pd.Series(row_list)\n",
     "\n",
@@ -152,11 +145,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "judicial-satisfaction",
+   "id": "b49f8355",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hmp.to_csv(\"numerical/sorghum_imp.hmp.txt\", sep=\"\\t\", index=False, header=True)"
+    "hmp.to_csv(\"name.linkImpute.hmp.txt\", sep=\"\\t\", index=False, header=True)"
    ]
   }
  ],
@@ -176,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
